initialized the app, added login page and new post page

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  
+  margin: 0;
+}
+
+.postContainer{
+  margin: 10px;
+  border: 1px solid black;
+  width: 50%;
+}
